crates/solidity-v2/testing/snapshots/cst_output/YulVariableDeclarationStatement/identifier_with_dots/generated/0.8.30-failure.txt
# This file is generated automatically by infrastructure scripts. Please don't edit by hand.

Error: Unexpected YulPeriod. One of YulBreakKeyword_Reserved, YulCloseBrace, YulColonEqual, YulComma, YulContinueKeyword_Reserved, YulDecimalLiteral, YulDoubleQuotedHexStringLiteral, YulDoubleQuotedStringLiteral, YulFalseKeyword_Reserved, YulForKeyword_Reserved, YulFunctionKeyword_Reserved, YulHexLiteral, YulIdentifier, YulIfKeyword_Reserved, YulLeaveKeyword_Reserved, YulLetKeyword_Reserved, YulOpenBrace, YulSingleQuotedHexStringLiteral, YulSingleQuotedStringLiteral, YulSwitchKeyword_Reserved, YulTrueKeyword_Reserved was expected
   ╭─[crates/solidity-v2/testing/snapshots/cst_output/YulVariableDeclarationStatement/identifier_with_dots/input.sol:5:6]
   │
 5 │ let a.b.c := 1
   │      ┬  
   │      ╰── Error occurred here.
───╯
